--- a/eyedetection/eyedetection/Properties/AndroidManifest.xml
+++ b/eyedetection/eyedetection/Properties/AndroidManifest.xml
@@ -6,6 +6,13 @@
   <uses-sdk android:minSdkVersion="28" android:targetSdkVersion="28" />
   <application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme">
   </application>
+  
+  <supports-screens android:resizeable="true"
+    android:smallScreens="true"
+    android:normalScreens="true"
+    android:largeScreens="true"
+    android:anyDensity="true" />
+  
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-permission android:name="android.permission.CAMERA"/>
   <uses-feature android:name="android.hardware.camera"/>
